--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 			<img src ="photo.jpg" alt="My Photo" height="200" width="200"/>
 			<h1> Sanjaya Trital </h1>
 		</div>
+		<a href ="aboutMe.html" > about me
+		</a>
+		
 		<ul>
 			<li> W1D1 Homepage</li>
 			<li> W1D2 About Me</li>
