added favourite movie

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,18 +6,26 @@
 		</head>
 		<body>
 			<div>
-				<h1> About me </h1>
+				<h1> About Sanjaya Trital </h1>
 				<p> My name is Sanjaya Trital. I'm from Nepal.
 			</div>
 				<hr />
 			<div>
-				<h1> My Classes this Quarter </h1>
+				<h2> My Classes this Quarter </h2>
 				<ul>
 					<li> CS 390 FPP</li>
+					<li> CS 401 MPP</li>
 					<li> CS435 Algorithms </li>
 					<li> CS 472 WAP </li>
+					<li> CS 544 EA</li>
 				</ul>
 			</div>
+			<div>
+				<h2> My favourite Movie </h2>
+				<ol>
+					<li> Captain Marvel<a href ="https://www.imdb.com/title/tt4154664/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB</a></li>
+					<li> Aquaman <a href ="https://www.imdb.com/title/tt1477834/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a> </li>
+					<li> Terminator 
 		
 		</body>
 	</html>
