--- a/aboutMe.html
+++ b/aboutMe.html
@@ -25,7 +25,9 @@
 				<ol>
 					<li> Captain Marvel<a href ="https://www.imdb.com/title/tt4154664/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB</a></li>
 					<li> Aquaman <a href ="https://www.imdb.com/title/tt1477834/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a> </li>
-					<li> Terminator 
+					<li> Terminator <a href ="https://www.imdb.com/title/tt6450804/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a></li>
+				</ol>
+			</div>
 		
 		</body>
 	</html>
