--- a/aboutMe.html
+++ b/aboutMe.html
@@ -28,7 +28,11 @@
 					<li> Terminator <a href ="https://www.imdb.com/title/tt6450804/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a></li>
 				</ol>
 			</div>
-		
+			
+				
+		<a href="https://validator.w3.org/check/referer">
+			<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
+		</a>
 		</body>
 	</html>
 	
