--- a/aboutMe.html
+++ b/aboutMe.html
@@ -28,8 +28,18 @@
 					<li> Terminator <a href ="https://www.imdb.com/title/tt6450804/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a></li>
 				</ol>
 			</div>
-			
-				
+			<div>
+				<h2> My Moods</h2>
+				Happy <img src ="happy.jpg" alt="happy face"/>
+				Sad <img src ="sad.jpg" alt="happy face"/>
+			</div>
+		
+			<div>
+				<h2> Fun about my Neighbors</h2>
+				<ul>
+					<li> Diego <a href ="diegokramerdesouza.github.io"> About Diego</a></li>
+					<li> Sandeep Baniya <a href ="bity88.github.io"> About Sandeep</a></li>
+				</ul>
 		<a href="https://validator.w3.org/check/referer">
 			<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
 		</a>
