--- a/aboutMe.html
+++ b/aboutMe.html
@@ -37,8 +37,8 @@
 			<div>
 				<h2> Fun about my Neighbors</h2>
 				<ul>
-					<li> Diego <a href ="diegokramerdesouza.github.io"> About Diego</a></li>
-					<li> Sandeep Baniya <a href ="bity88.github.io"> About Sandeep</a></li>
+					<li> Diego <a href ="https://diegokramerdesouza.github.io"> About Diego</a></li>
+					<li> Sandeep Baniya <a href ="http://bity88.github.io"> About Sandeep</a></li>
 				</ul>
 		<a href="https://validator.w3.org/check/referer">
 			<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
