--- a/aboutMe.html
+++ b/aboutMe.html
@@ -40,6 +40,7 @@
 					<li> Diego <a href ="https://diegokramerdesouza.github.io"> About Diego</a></li>
 					<li> Sandeep Baniya <a href ="http://bity88.github.io"> About Sandeep</a></li>
 				</ul>
+			</div>
 		<a href="https://validator.w3.org/check/referer">
 			<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
 		</a>
