--- a/aboutMe.html
+++ b/aboutMe.html
@@ -30,8 +30,8 @@
 			</div>
 			<div>
 				<h2> My Moods</h2>
-				Happy <img src ="happy.jpg" alt="happy face"/>
-				Sad <img src ="sad.jpg" alt="happy face"/>
+				Happy <img src ="happy.jpg" alt="happy face" height="90" width="90"/>
+				Sad <img src ="sad.jpg" alt="happy face" height="90" width="90"/>
 			</div>
 		
 			<div>
