--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
 		</head>
 	<body>
 		<div>
-			<img src ="photo.jpg" alt="My Photo" height="200" width="200"/>
+			<img src ="photo.jfif" alt="My Photo" height="200" width="200"/>
 			<h1> Sanjaya Trital </h1>
 		</div>
-		<a href ="aboutMe.html" > about me
-		</a>
 		
 		<ul>
-			<li> W1D1 Homepage</li>
-			<li> W1D2 About Me</li>
+			<li> <a href ="index.html" >W1D1 Homepage</a></li>
+			<li> <a href ="aboutMe.html">W1D2 About Me</a></li>
 			<li> W1D3 Journal</li>
 			<li> W1D4 Decorate My Text </li>
 			<li> W1D5 Maze </li>
