update description about me

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,7 +7,7 @@
 		<body>
 			<div>
 				<h1> About Sanjaya Trital </h1>
-				<p> My name is Sanjaya Trital. I'm from Nepal.
+				<p> My name is Sanjaya Trital. I'm from Nepal. I love traveling and playing games.
 			</div>
 				<hr />
 			<div>
