--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,12 +2,13 @@
 	<html lang="en">
 		<head>
 			<meta charset="utf-8" />
+			<link href ="./styleme.css" type="text/css" rel="stylesheet" />
 				<title>About Me</title>
 		</head>
 		<body>
-			<div>
+			<div class ="introduction">
 				<h1> About Sanjaya Trital </h1>
-				<p> My name is Sanjaya Trital. I'm from Nepal. I love traveling and playing games.
+				<p > My name is Sanjaya Trital. I'm from Nepal. I love traveling and playing games.
 			</div>
 				<hr />
 			<div>
@@ -23,9 +24,9 @@
 			<div>
 				<h2> My favourite Movie </h2>
 				<ol>
-					<li> Captain Marvel<a href ="https://www.imdb.com/title/tt4154664/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB</a></li>
-					<li> Aquaman <a href ="https://www.imdb.com/title/tt1477834/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a> </li>
-					<li> Terminator <a href ="https://www.imdb.com/title/tt6450804/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a></li>
+					<li> Captain Marvel<a class="imdb" href ="https://www.imdb.com/title/tt4154664/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB</a></li>
+					<li> Aquaman <a class="imdb" href ="https://www.imdb.com/title/tt1477834/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a> </li>
+					<li> Terminator <a class="imdb" href ="https://www.imdb.com/title/tt6450804/?ref_=nv_sr_1?ref_=nv_sr_1"> IMDB </a></li>
 				</ol>
 			</div>
 			<div>
@@ -44,6 +45,13 @@
 		<a href="https://validator.w3.org/check/referer">
 			<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
 		</a>
+
+		<p>
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+			<img src="https://jigsaw.w3.org/css-validator/images/vcss
+			" alt="Valid CSS!" /></a>
+			</p>
+
 		</body>
 	</html>
 	
