--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,7 +8,7 @@
 		<body>
 			<div class ="introduction">
 				<h1> About Sanjaya Trital </h1>
-				<p > My name is Sanjaya Trital. I'm from Nepal. I love traveling and playing games.
+				<p > My name is Sanjaya Trital. I'm from Nepal. I love <span class="intro">  traveling </span>and <span class="intro">  games</span>.
 			</div>
 				<hr />
 			<div>
@@ -38,19 +38,17 @@
 			<div>
 				<h2> Fun about my Neighbors</h2>
 				<ul>
-					<li> Diego <a href ="https://diegokramerdesouza.github.io"> About Diego</a></li>
-					<li> Sandeep Baniya <a href ="http://bity88.github.io"> About Sandeep</a></li>
+					<li> Diego <a class="imdb" href ="https://diegokramerdesouza.github.io"> About Diego</a></li>
+					<li> Sandeep Baniya <a class="imdb" href ="http://bity88.github.io"> About Sandeep</a></li>
 				</ul>
 			</div>
 		<a href="https://validator.w3.org/check/referer">
 			<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
 		</a>
 
-		<p>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">
 			<img src="https://jigsaw.w3.org/css-validator/images/vcss
 			" alt="Valid CSS!" /></a>
-			</p>
 
 		</body>
 	</html>
