--- a/grannypie/pie.html
+++ b/grannypie/pie.html
@@ -19,7 +19,7 @@
             </div>
             <hr />
             <h2><span class ="heading">INGREDIENTS</span></h2>
-            <ol class="innerlist">
+            <ul>
                 <li>1 cup white sugar</li>
                 <li>2 <span class="abbrevaration">tbsp</span> all-purpose flour</li>
                 <li>3 <span class="abbrevaration">tbsp</span> cornstarch</li>
@@ -31,13 +31,13 @@
                 <li>1 (9 inch) pie crust, baked</li>
                 <li>4 egg whites</li>
                 <li>6 <span class="abbrevaration">tbsp</span> white sugar</li>
-            </ol>
+            </ul>
             <hr />
             <h2><span class ="heading">DIRECTIONS</span></h2>
             <ol>
                 <li><span class="listheading">Preheat Oven:</span> Preheat oven to 350 degrees F (175 degrees C).</li>
                 <li><span class="listheading">Make Lemon Filling:</span> In a medium saucepan ...</li>
-                    <ol class="innerlist">
+                    <div class="innerlist">
                         <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
                         <li>Stir in water, lemon juice and lemon zest.</li>
                         <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
@@ -47,13 +47,13 @@
                         <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
                         <li>Remove from heat.</li>
                         <li>Pour filling into baked pastry shell.</li>
-                    </ol>
+                    </div>
                 <li><span class="listheading">Make Meringue:</span> In a large glass or metal bowl ...</li> 
-                    <ol class="innerlist">
+                    <div class="innerlist">
                         <li>Whip egg whites until foamy.</li>
                         <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
                         <li>Spread meringue over pie, sealing the edges at the crust.</li>
-                    </ol>
+                    </div>
                 <li><span class="listheading">Bake:</span> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
             </ol>
 
