--- a/grannypie/pie.html
+++ b/grannypie/pie.html
@@ -36,8 +36,8 @@
             <h2><span class ="heading">DIRECTIONS</span></h2>
             <ol>
                 <li><span class="listheading">Preheat Oven:</span> Preheat oven to 350 degrees F (175 degrees C).</li>
-                <li><span class="listheading">Make Lemon Filling:</span> In a medium saucepan ...</li>
-                    <div class="innerlist">
+                <li><span class="listheading">Make Lemon Filling:</span> In a medium saucepan ...
+                    <ul>
                         <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
                         <li>Stir in water, lemon juice and lemon zest.</li>
                         <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
@@ -47,13 +47,15 @@
                         <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
                         <li>Remove from heat.</li>
                         <li>Pour filling into baked pastry shell.</li>
-                    </div>
-                <li><span class="listheading">Make Meringue:</span> In a large glass or metal bowl ...</li> 
-                    <div class="innerlist">
+                    </ul>
+                </li>
+                <li><span class="listheading">Make Meringue:</span> In a large glass or metal bowl ... 
+                    <ul>
                         <li>Whip egg whites until foamy.</li>
                         <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
                         <li>Spread meringue over pie, sealing the edges at the crust.</li>
-                    </div>
+                    </ul>
+                </li>
                 <li><span class="listheading">Bake:</span> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
             </ol>
 
