--- a/grannypie/pie.html
+++ b/grannypie/pie.html
@@ -21,16 +21,16 @@
             <h2><span class ="heading">INGREDIENTS</span></h2>
             <ul>
                 <li>1 cup white sugar</li>
-                <li>2 <span class="abbrevaration">tbsp</span> all-purpose flour</li>
-                <li>3 <span class="abbrevaration">tbsp</span> cornstarch</li>
-                <li>1/4<span class="abbrevaration"> tsp</span> salt</li>
+                <li>2 <span class="abbrevaration" title="tablespoons">tbsp</span> all-purpose flour</li>
+                <li>3 <span class="abbrevaration" title="tablespoons">tbsp</span> cornstarch</li>
+                <li>1/4<span class="abbrevaration" title="teaspoon"> tsp</span> salt</li>
                 <li>1 1/2 cups water</li>
                 <li>2 lemons, juiced and zested</li>
-                <li>2 <span class="abbrevaration">tbsp</span> butter</li>
+                <li>2 <span class="abbrevaration" title="tablespoons">tbsp</span> butter</li>
                 <li>4 egg yolks, beaten</li>
                 <li>1 (9 inch) pie crust, baked</li>
                 <li>4 egg whites</li>
-                <li>6 <span class="abbrevaration">tbsp</span> white sugar</li>
+                <li>6 <span class="abbrevaration" title="tablespoons">tbsp</span> white sugar</li>
             </ul>
             <hr />
             <h2><span class ="heading">DIRECTIONS</span></h2>
@@ -103,11 +103,11 @@
                     <img src="https://jigsaw.w3.org/css-validator/images/vcss
                     " alt="Valid CSS!" /></a>
             </div>
-            
+
             <footer>
-                Copyright Â© 2012 Granny's Pies |<br/>
-                A Granny's Pies Production     |<br />
-                All rights reserved |
+                Copyright Â© 2012 Granny's Pies  |<br/>
+                A Granny's Pies Production      |<br />
+                All rights reserved  |
             </footer>
         </body>
 
