--- a/grannypie/pie.html
+++ b/grannypie/pie.html
@@ -105,9 +105,11 @@
             </div>
 
             <footer>
-                Copyright Â© 2012 Granny's Pies  |<br/>
-                A Granny's Pies Production      |<br />
-                All rights reserved  |
+                <pre>
+            Copyright © 2012 Granny's Pies  |
+            A Granny's Pies Production      |
+            All rights reserved             |
+            </pre>
             </footer>
         </body>
 
