--- a/grannypie/pie.html
+++ b/grannypie/pie.html
@@ -67,7 +67,7 @@
             <hr />
             <h2><span class ="heading">USER COMMENTS</span></h2>
             <div class="usercomments">
-            <p class="usercomments">
+            <p class="comments">
                 This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in <br />
                 addition to egg yolks, and contains no milk.<br />
                 <br />
