added journal in index page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li> <a href ="index.html" >W1D1 Homepage</a></li>
 			<li> <a href ="aboutMe.html">W1D2 About Me</a></li>
-			<li> W1D3 Journal</li>
+			<li><a href="./journal/jounal.html"> W1D3 Journal</a></li>
 			<li> W1D4 Decorate My Text </li>
 			<li> W1D5 Maze </li>
 			<li>W1D6 Urban Dictionary </li>
