--- a/moviereview/tmnt.html
+++ b/moviereview/tmnt.html
@@ -188,9 +188,12 @@
       </div>  
     
     <footer>
-		
-			<a href="http://validator.w3.org/check/referer"><img src="w3c-html.png" alt="Valid HTML5" /></a> <br />
-			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="Valid CSS" /></a>
+			<a href="https://validator.w3.org/check/referer" target="_blank">
+                <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
+			</a >  <br />
+			<a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+                <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="html validator"/>
+            </a>
         
 	</footer>
 </div>
