--- a/moviereview/tmnt.html
+++ b/moviereview/tmnt.html
@@ -63,7 +63,7 @@
 			</dd>
 		</dl>
     </aside>
-		<section>
+		<div class="section">
 			<header>
 			<img src="./rottenbig.png" alt="Rotten"  />
             <span class="rating">33%</span>
@@ -117,7 +117,7 @@
 <div class="written">
 		<p class="layout">
 			<img src="./rotten.gif" alt="Rotten" />
-			<q>YOUR REVIEW HERE</q>
+			<q>"There is no construction and the story has to take some considerable jumps. But it is all very good fun and often stimulating to the imagination."</q>
 		</p>
 		<p>
 			<img src="./critic.gif" alt="Critic" />
@@ -174,7 +174,7 @@
 	<div class="written">
 		<p>
 			<img src="./rotten.gif" alt="Rotten" />
-			<q>YOUR REVIEW HERE</q>
+			<q>It is a film so soul-crushingly dismissive of its entertainment value that it makes the thought of sitting in a theater anytime soon after sound like a chore." </q>
 		</p>
 		<p>
 			<img src="./critic.gif" alt="Critic" />
@@ -183,7 +183,7 @@
 		</p>
 	</div>
 		</div>
-    </section>
+	</div>
         <p>(1-10) of 88</p>
       </div>  
     
