--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<ul>
 			<li> <a href ="index.html" >W1D1 Homepage</a></li>
 			<li> <a href ="aboutMe.html">W1D2 About Me</a></li>
-			<li><a href="./grannypie/pie.html">Granny Pie</a></li>
+			<li><a href="./grannypie/pie.html">Homework 1: Recipe</a></li>
 			<li><a href="./journal/jounal.html"> W1D3 Journal</a></li>
-			<li><a href="./moviereview/tmnt.html">Movie Review</a></li>
+			<li><a href="./moviereview/tmnt.html">Homework 2: Movie Review</a></li>
 			<li> W1D4 Decorate My Text </li>
 			<li> W1D5 Maze </li>
 			<li>W1D6 Urban Dictionary </li>
