--- a/Buggy Javascript/page1.html
+++ b/Buggy Javascript/page1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8"/>
 		<title>Buggy Page #1</title>
 		<script src="bugyy1.js" type="text/javascript"></script>
 	</head>
