--- a/Buggy Javascript/page2.html
+++ b/Buggy Javascript/page2.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8"/>
 		<title>Buggy Page #2</title>
-		<script src="buggy2.js" type="text/javascript" ></script>
+		<script src="./buggy2.js" type="text/javascript"></script>
 	</head>
+
 	<body>
 		<div>
-			<button onc1ick="gogogo();">Click Me!!1</button>
+			<button onclick="gogogo();">Click Me!!1</button>
 		</div>
 	</body>
 </html>
