--- a/Buggy Javascript/page4.html
+++ b/Buggy Javascript/page4.html
@@ -10,5 +10,16 @@
 		<div>
 			<button onclick="gogogo();">Click Me!!1</button>
 		</div>
+
+		<div class ="validator">
+            <a href="https://validator.w3.org/check/referer">
+                <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
+            </a>
+    
+                <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img src="https://jigsaw.w3.org/css-validator/images/vcss
+                " alt="Valid CSS!" /></a>
+        </div>
+
 	</body>
 </html>
