--- a/TipCalculator/tip.html
+++ b/TipCalculator/tip.html
@@ -8,7 +8,7 @@
         <title>Tip Calculator</title>
         <meta charset="utf-8" />
 		<link href="tip.css" type="text/css" rel="stylesheet" />
-		<script src="tipcalculator.js" type="text/javascript"></script> 
+		<script src="tipcalculator.js"></script> 
 	</head>
 
 
