--- a/Buggy Javascript/page3.html
+++ b/Buggy Javascript/page3.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Buggy Page #3</title>
-		<script src="buggy3.js" type="text/javascript"></script>
+		<script src="buggy3.js"></script>
 	</head>
 
 	<body>
@@ -15,10 +15,7 @@
             <a href="https://validator.w3.org/check/referer">
                 <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
             </a>
-    
-                <a href="https://jigsaw.w3.org/css-validator/check/referer">
-                <img src="https://jigsaw.w3.org/css-validator/images/vcss
-                " alt="Valid CSS!" /></a>
+ 
         </div>
 
 	</body>
