--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			<li><a href="./grannypie/pie.html">Homework 1: Recipe</a></li>
 			<li><a href="./journal/jounal.html"> W1D3 Journal</a></li>
 			<li><a href="./moviereview/tmnt.html">Homework 2: Movie Review</a></li>
+			<li><a href="./Buggy Javascript"> Buggy pages</a></li>
+			<li><a href="./TipCalculator/tip.html">Homework 3: Tip Calculator</a></li>
 			<li> W1D4 Decorate My Text </li>
 			<li> W1D5 Maze </li>
 			<li>W1D6 Urban Dictionary </li>
