--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 			<li><a href="./grannypie/pie.html">Homework 1: Recipe</a></li>
 			<li><a href="./journal/jounal.html"> W1D3 Journal</a></li>
 			<li><a href="./moviereview/tmnt.html">Homework 2: Movie Review</a></li>
-			<li><a href="./Buggy Javascript"> Buggy pages</a></li>
+			<li> Buggy pages
+				<ul>
+					<li><a href="./Buggy Javascript/page1.html">Buggy page#1</a></li>
+					<li><a href="./Buggy Javascript/page2.html">Buggy page#2</a></li>
+					<li><a href="./Buggy Javascript/page3.html">Buggy page#3</a></li>
+					<li><a href="./Buggy Javascript/page4.html">Buggy page#4</a></li>
+				</ul>
+			</li>
 			<li><a href="./TipCalculator/tip.html">Homework 3: Tip Calculator</a></li>
 			<li> W1D4 Decorate My Text </li>
 			<li> W1D5 Maze </li>
