--- a/BuggyJavascript/page1.html
+++ b/BuggyJavascript/page1.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<title>Buggy Page #3</title>
-		<script src="buggy3.js"></script>
+		<title>Buggy Page #1</title>
+		<script src="bugyy1.js"></script>
 	</head>
 
 	<body>
@@ -11,12 +11,12 @@
 			<button onclick="gogogo();">Click Me!!1</button>
 		</div>
 
-		<div class ="validator">
+		<footer>
             <a href="https://validator.w3.org/check/referer">
                 <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
             </a>
- 
-        </div>
+  
+		</footer>
 
 	</body>
 </html>
