--- a/TipCalculator/tip.html
+++ b/TipCalculator/tip.html
@@ -37,7 +37,7 @@
 			<p id="total">$0.00</p>
         </div>
         
-        <div class ="validator">
+        <footer>
             <a href="https://validator.w3.org/check/referer">
                 <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
             </a>
@@ -45,7 +45,7 @@
                 <a href="https://jigsaw.w3.org/css-validator/check/referer">
                 <img src="https://jigsaw.w3.org/css-validator/images/vcss
                 " alt="Valid CSS!" /></a>
-        </div>
+        </footer>
 
 	</body>
 </html>
