--- a/BuggyJavascript/page1.html
+++ b/BuggyJavascript/page1.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Buggy Page #1</title>
+		<link href="./buggyScript.css" type="text/css" rel="stylesheet"/>
 		<script src="bugyy1.js"></script>
 	</head>
 
@@ -14,7 +15,10 @@
 		<footer>
             <a href="https://validator.w3.org/check/referer">
                 <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
-            </a>
+			</a>
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img src="https://jigsaw.w3.org/css-validator/images/vcss
+                " alt="Valid CSS!" /></a>
   
 		</footer>
 
