--- a/BuggyJavascript/page2.html
+++ b/BuggyJavascript/page2.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8"/>
 		<title>Buggy Page #2</title>
 		<script src="./buggy2.js"></script>
+		<link href="./buggyScript.css" type="text/css" rel="stylesheet"/>
 	</head>
 
 	<body>
@@ -14,7 +15,11 @@
 		<footer>
             <a href="https://validator.w3.org/check/referer">
                 <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
-            </a>
+			</a>
+			
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img src="https://jigsaw.w3.org/css-validator/images/vcss
+                " alt="Valid CSS!" /></a>
 
 		</footer>
 
