--- a/BuggyJavascript/page3.html
+++ b/BuggyJavascript/page3.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Buggy Page #3</title>
+		<link href="./buggyScript.css" type="text/css" rel="stylesheet"/>
 		<script src="buggy3.js"></script>
 	</head>
 
@@ -16,6 +17,9 @@
                 <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
             </a>
  
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img src="https://jigsaw.w3.org/css-validator/images/vcss
+                " alt="Valid CSS!" /></a>
 		</footer>
 
 	</body>
