--- a/BuggyJavascript/page4.html
+++ b/BuggyJavascript/page4.html
@@ -10,6 +10,7 @@
 	<body>
 		<div>
 			<button onclick="gogogo();">Click Me!!1</button>
+			<button onclick="somethingElse();">comparison</button>
 		</div>
 		<footer>
             <a href="https://validator.w3.org/check/referer">
