update decorate text

--- a/decorateCode/decoratemytext.html
+++ b/decorateCode/decoratemytext.html
@@ -35,7 +35,8 @@
     <fieldset>
         <legend>Decoration</legend>
         <button id="decoration" > Bigger Decorations!</button><br />
-        <input type="checkbox" id="bling"/>Bling
+		<input type="checkbox" id="bling"/>Bling<br />
+		<button id="translate">Igpay Atinlay</button>
     </fieldset>
 	</body>
 </html>
