--- a/decorateCode/decoratemytext.html
+++ b/decorateCode/decoratemytext.html
@@ -37,6 +37,20 @@
         <button id="decoration" > Bigger Decorations!</button><br />
 		<input type="checkbox" id="bling"/>Bling<br />
 		<button id="translate">Igpay Atinlay</button>
-    </fieldset>
+	</fieldset>
+	
+	<footer>
+	<a href="https://validator.w3.org/check/referer">
+		<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
+	</a>
+
+		<a href="https://jigsaw.w3.org/css-validator/check/referer">
+		<img src="https://jigsaw.w3.org/css-validator/images/vcss
+		" alt="Valid CSS!" />
+	</a>
+	<a href="http://mumstudents.org/jscheck/referer.php">
+		<img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"/>
+	</a>
+</footer>
 	</body>
 </html>
