update decorate text

--- a/decorateCode/decoratemytext.html
+++ b/decorateCode/decoratemytext.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Text Decorator</title>
 		<link href="decoratemytext.css" type="text/css" rel="stylesheet" />
@@ -10,7 +10,7 @@
 		many useful functions which we need.
 		Please don't remove this link or change its URL; leave it as-is!
 		-->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
         <!-- link to your script file here -->
         <script src="decoratemytext.js"></script>
@@ -47,9 +47,6 @@
 		<a href="https://jigsaw.w3.org/css-validator/check/referer">
 		<img src="https://jigsaw.w3.org/css-validator/images/vcss
 		" alt="Valid CSS!" />
-	</a>
-	<a href="http://mumstudents.org/jscheck/referer.php">
-		<img src="http://mumstudents.org/jscheck/jscheck-small.png" alt="js validator"/>
 	</a>
 </footer>
 	</body>
