--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 				</ul>
 			</li>
 			<li><a href="./TipCalculator/tip.html"> Tip Calculator</a></li>
-			<li> W1D4 Decorate My Text </li>
-			<li> W1D5 Maze </li>
-			<li>W1D6 Urban Dictionary </li>
+			<li><a href="./decorateCode/decoratemytext.html"> Decorate My Text </a></li>
+			<li><a href="./ASCIImation/ascii.html">ASCIImation</a></li>
 		</ul>
 
 
