--- a/decorateCode/decoratemytext.html
+++ b/decorateCode/decoratemytext.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Text Decorator</title>
 		<link href="decoratemytext.css" type="text/css" rel="stylesheet" />
@@ -10,7 +10,7 @@
 		many useful functions which we need.
 		Please don't remove this link or change its URL; leave it as-is!
 		-->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
         <!-- link to your script file here -->
         <script src="decoratemytext.js"></script>
@@ -35,7 +35,19 @@
     <fieldset>
         <legend>Decoration</legend>
         <button id="decoration" > Bigger Decorations!</button><br />
-        <input type="checkbox" id="bling"/>Bling
-    </fieldset>
+		<input type="checkbox" id="bling"/>Bling<br />
+		<button id="translate">Igpay Atinlay</button>
+	</fieldset>
+	
+	<footer>
+	<a href="https://validator.w3.org/check/referer">
+		<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
+	</a>
+
+		<a href="https://jigsaw.w3.org/css-validator/check/referer">
+		<img src="https://jigsaw.w3.org/css-validator/images/vcss
+		" alt="Valid CSS!" />
+	</a>
+</footer>
 	</body>
 </html>
