--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li><a href="./grannypie/pie.html">Homework 1: Recipe</a></li>
 			<li><a href="./journal/jounal.html"> W1D3 Journal</a></li>
 			<li><a href="./moviereview/tmnt.html">Homework 2: Movie Review</a></li>
-			<li>Buggy pages
+			<li> Assignment3: Buggy pages
 				<ul>
 					<li><a href="./BuggyJavascript/page1.html">Buggy page#1</a></li>
 					<li><a href="./BuggyJavascript/page2.html">Buggy page#2</a></li>
@@ -24,9 +24,10 @@
 					<li><a href="./BuggyJavascript/page4.html">Buggy page#4</a></li>
 				</ul>
 			</li>
-			<li><a href="./TipCalculator/tip.html"> Tip Calculator</a></li>
-			<li><a href="./decorateCode/decoratemytext.html"> Decorate My Text </a></li>
-			<li><a href="./ASCIImation/ascii.html">ASCIImation</a></li>
+			<li><a href="./HTMLForm/form.html">Assignment 4: HTML Form</a></li>
+			<li><a href="./TipCalculator/tip.html"> Assignment5: Tip Calculator</a></li>
+			<li><a href="./decorateCode/decoratemytext.html"> Assignment 6: Decorate My Text </a></li>
+			<li><a href="./ASCIImation/ascii.html">Assignment 6: ASCIImation</a></li>
 		</ul>
 
 
