--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<li><a href="./TipCalculator/tip.html"> Assignment5: Tip Calculator</a></li>
 			<li><a href="./decorateCode/decoratemytext.html"> Assignment 6: Decorate My Text </a></li>
 			<li><a href="./ASCIImation/ascii.html">Assignment 6: ASCIImation</a></li>
+			<li><a href="./closure/bankAccount.html">Assignment 7: Closure</a></li>
 		</ul>
 
 
