update maze game

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			<li><a href="./decorateCode/decoratemytext.html"> Assignment 6: Decorate My Text </a></li>
 			<li><a href="./ASCIImation/ascii.html">Assignment 6: ASCIImation</a></li>
 			<li><a href="./closure/bankAccount.html">Assignment 7: Closure</a></li>
+			<li><a href="./Inheritance/jsInheritance.js">Assignment 8: Inheritance</a></li>
+			<li><a href="./Maze/maze.html">Assignment 9: Maze(Using jQuery)</a></li>
 		</ul>
 
 
