--- a/Maze/maze.html
+++ b/Maze/maze.html
@@ -39,6 +39,21 @@
 		
 		<p>
 			Good luck!
-		</p>
+        </p>
+        
+        <footer>
+            <a href="https://validator.w3.org/check/referer">
+                <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="html validator"/>
+            </a>
+    
+                <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
+            </a>
+
+            <a href="https://webster.cs.washington.edu/jslint/?referer">
+                <img src="https://webster.cs.washington.edu/w3c-js.png" alt="Valid JS" />
+            </a>
+        </footer>
+
 	</body>
 </html>
