--- a/maze/maze.html
+++ b/maze/maze.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<!--
 	CSE 190 M Lab 7 HTML file
 	You should download this file for your lab, but you should not edit its contents.
@@ -13,7 +13,7 @@
 		<script src="jquery.js"></script>
 		
 		<!-- your code -->
-		<script src="maze.js" type="text/javascript"></script>
+		<script src="maze.js"></script>
 	</head>
 
 	<body>
