--- a/HTMLForm/form.html
+++ b/HTMLForm/form.html
@@ -24,7 +24,7 @@
                 <div class="wrap1">
                     <label>First Name</label>
                     <input type="text" class="textType" name="firstName" required
-                    pattern="[a-Za-z]{1,}"/>
+                    pattern="^[a-Za-z]{1,}$"/>
                     <label>Date Of Birth</label>
                     <input type="text" class="textType" placeholder="MM/DD/YY" required
                     pattern="^\d{2}\/\d{2}\/\d{4}$"/>
@@ -48,7 +48,7 @@
                         <input type="text" class="textType" placeholder="___-___-___"
                         pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required
                         title="Valid format xxx-xxx-xxx" 
-                        maxlength="9"/>
+                        maxlength="9" size="9"/>
                 </div>
                 <div class="wrap">
                         <label>How did you learn about this card? (Optional)</label>
