--- a/Ajax/ajax.html
+++ b/Ajax/ajax.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<!--
 	CSE 190 M, Summer 2012
 	Output Comparison Ajax example
 	-->
 
 	<head>
-		<title>Output Comparison Tool</title>
+        <title>Output Comparison Tool</title>
+        <meta charset="utf-8"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 		<script src="output.js" type="text/javascript"></script>
 	</head>
