update index page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<li><a href="./closure/bankAccount.html">Assignment 7: Closure</a></li>
 			<li><a href="./Inheritance/jsInheritance.js">Assignment 8: Inheritance</a></li>
 			<li><a href="./Maze/maze.html">Assignment 9: Maze(Using jQuery)</a></li>
+			<li><a href="./Fifteen puzzle/fifteen.html">Fifteen Puzzle</a></li>
 			<li><a href="./Ajax/ajax.html">Ajax Assignment</a></li>
 			<li><a href="https://github.com/sanjayatrital1/WAPServlet">Servlet Assignment1: CS Help form</a> </li>
 		</ul>
