--- a/Fifteen puzzle/fifteen.html
+++ b/Fifteen puzzle/fifteen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<!--
      2/14/2015kl  Fifteen Puzzle
 	You should not modify fifteen.html.  Your JS code should work with an
@@ -7,14 +7,15 @@
 	-->
 	<head>
 		<title>Fifteen Puzzle</title>
+		<meta charset="utf-8"/>
 
 		<!-- instructor-provided JavaScript files; do not modify -->
-		<script type="text/javascript" src="jquery-latest.js"></script>
+		<script src="jquery-latest.js"></script>
 
 
 		<!-- your files that you will write -->
 		<link href="fifteen.css" type="text/css" rel="stylesheet" />
-		<script src="fifteen.js" type="text/javascript"></script>
+		<script src="fifteen.js"></script>
 	</head>
 
 	<body>
@@ -47,8 +48,17 @@
 		</p>
 
         <div class="footer">
-            <a href="http://validator.w3.org/check/referer"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/></a>
-        </div>
+			<a href="http://validator.w3.org/check/referer">
+				<img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" 
+				alt="html validator"/></a>
+
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" 
+				alt="css validator"/></a>
+
+			<a href="https://webster.cs.washington.edu/jslint/?referer">
+					<img src="https://webster.cs.washington.edu/w3c-js.png" alt="Valid JS" />
+				</a>
+		</div>
 	</body>
 </html>
