--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<li><a href="./Inheritance/jsInheritance.js">Assignment 8: Inheritance</a></li>
 			<li><a href="./Maze/maze.html">Assignment 9: Maze(Using jQuery)</a></li>
 			<li><a href="https://github.com/sanjayatrital1/WAPServlet">Servlet Assignment1: CS Help form</a> </li>
+			<li><a href="https://github.com/sanjayatrital1/LoginServlet"> Servlet Assignment 2: Login Servlet</a></li>
 		</ul>
 
 
