--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<li><a href="./Ajax/ajax.html">Ajax Assignment</a></li>
 			<li><a href="https://github.com/sanjayatrital1/WAPServlet">Servlet Assignment1: CS Help form</a> </li>
 			<li><a href="https://github.com/sanjayatrital1/LoginServlet"> Servlet Assignment 2: Login Servlet</a></li>
+			<li><a href="https://github.com/sanjayatrital1/eCommerce">Final Assignment</a></li>
 		</ul>
 
 
